[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Pedro Nieto Méndez <pedrete999@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
